--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <!-- Title -->
-    <title>Noelle</title>
+    <title>Merry Christmas to Minh Thi</title>
     <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css" />
     <!-- Css Files -->
@@ -31,7 +31,7 @@
         <a class="musicPlayer" href="javascript:;">MUSIC</a>
         <!-- Big Screen - Deer -->
         <div class="bigScreenWrap">
-            <span class="title">woow!</span> <span>Big Screen</span>
+            <span class="title">woow!</span> <span>Qùa Bự..</span>
         </div>
         <!-- Snow Effect -->
         <div class="snowEffect">
