--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <!-- Title -->
-    <title>Merry Christmas to Minh Thi</title>
+    <title>Christmas to Minh Thi 2014</title>
     <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css" />
     <!-- Css Files -->
