--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a class="musicPlayer" href="javascript:;">MUSIC</a>
         <!-- Big Screen - Deer -->
         <div class="bigScreenWrap">
-            <span class="title">woow!</span> <span>Big Gift</span>
+            <span class="title">woow!</span> <span>Quà bự..</span>
         </div>
         <!-- Snow Effect -->
         <div class="snowEffect">
