--- a/index.html
+++ b/index.html
@@ -159,21 +159,21 @@
             <!-- Mail Sender -->
             <a href="javascript:;" class="mail">Mail</a>
             <div class="emailSender">
-                <span class="title">E-Card Sender</span>
+                <span class="title">Gửi Lời Chúc</span>
                 <form id="eCard" action="phpmail/mail.php" method="get">
                 <p>
                     <label for="name">
-                        Your Name</label>
+                        Tên Của Bạn</label>
                     <input type="text" id="name" name="name" class="required" maxlength="25" />
                 </p>
                 <p>
                     <label for="email">
-                        Friend's Email</label>
+                        Email Của Bạn</label>
                     <input type="text" id="email" name="email" class="required" maxlength="100" />
                 </p>
                 <p>
                     <label for="message">
-                        Message for Your Friend</label>
+                        Message for Minh Thi</label>
                     <textarea id="message" name="message" class="required" cols="6" rows="2"></textarea>
                 </p>
                 <a href="javascript:;" class="send">Send</a>
@@ -218,13 +218,13 @@
     <script type="text/javascript">
         // <![CDATA[
         /* Counter For New Year Settings - Start */
-        TargetDate = "12/25/2014 00:00 AM";
+        TargetDate = "01/01/2015 00:00 AM";
         BackColor = "transparent";
         ForeColor = "navy";
         CountActive = true;
         CountStepper = -1;
         LeadingZero = true;
-        DisplayFormat = '<span class="day">%%D%% Days</span> <span class="time">%%H%%:%%M%%:%%S%%</span>';
+        DisplayFormat = '<span class="day">%%D%% Ngày</span> <span class="time">%%H%%:%%M%%:%%S%%</span>';
         FinishMessage = "<span>to</span> <span>Minh Thi <3</span>";
         /* Counter For New Year Settings - End */
 
