--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
             <!-- Your Message -->
             <div class="yourMessageWrap">
-                <span class="message">MERRY CHRISTMAS</span>
+                <span class="message">HAPPY NEW YEAR 2015</span>
                 <img src="assets/images/General/logo.png" alt="logo" />
             </div>
             <!-- Copyright Text -->
