--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img src="assets/images/General/moon.png" alt="moon" class="moon" />
         <!-- Counter Table -->
         <div class="counterTable">
-            <span class="title">Merry Christmas</span>
+            <span class="title">HAPPY NEW YEAR 2015</span>
             <div id="cntdwn">
             </div>
             <a href="javascript:;">Minh Thi</a>
@@ -185,7 +185,7 @@
             </div>
             <!-- Your Message -->
             <div class="yourMessageWrap">
-                <span class="message">HAPPY NEW YEAR 2015</span>
+                <span class="message">MERRY CHRISTMAS</span>
                 <img src="assets/images/General/logo.png" alt="logo" />
             </div>
             <!-- Copyright Text -->
