--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </p>
                 <p>
                     <label for="message">
-                        Message for Minh Thi</label>
+                       Lời chúc tới Minh Thi</label>
                     <textarea id="message" name="message" class="required" cols="6" rows="2"></textarea>
                 </p>
                 <a href="javascript:;" class="send">Send</a>
